merge error stream with stdout